welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: warning: enclosing method finale has result type Unit: return value discarded
      return estFaceMur()
      ^SnakeBuggle:10: warning: enclosing method finale has result type Unit: return value discarded
      return estFaceMur();
      ^SnakeBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
  while(finale()){serpent()}
              ^